Edited notes on EGR 322 homework page to move important content up for those who suffer TLDR syndrome

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/26/2020 8:03 pm)
+                              >(Last update: 8/26/2020 8:47 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -204,34 +204,46 @@ PS                                                           <BR>
                                  <TR><TD width="60" valign="top">
 Note 1)
                                                         </TD><TD>
-The text includes four kinds of problem solving.<br>
-Generally only the last kind, "<i>Problems</i>" are assigned.<br>
-a.) <i><u>Video Examples</u></i> are embedded throughout the reading 
-assignments.  These have complete solutions presented via video 
-accessed by Web.  Some of the homework may parallel these video 
-examples. The first video example is on page 5.  Some of the 
-video examples are free and some are paid "premium" content.  
-Students should watch some of these, choosing especially the 
-video examples on topics that are found challenging.  However,
-the "premium content" need not be purchased.  You can always 
-ask Professor De Boer to explain the video example.<br>
-b.) <i><u>Examples</u></i> are also embedded throughout the 
-reading assignments. These have complete written solutions in 
-the textbook.  Some of the homework may parallel these examples.  
-The first example is on page 7.<br>
-c.) <i><u>Exercises</u></i> are also embedded throughout the 
-reading assignments.  These have answers, but not complete 
+Our Textbook, <i>Microelectronic Circuits</i>, by Sedra, Smith, 
+<i>et. al.</i>, includes four kinds of problem solving.  Generally 
+only the first kind described here, "<i><b>Problems</b></i>" 
+are assigned.<br><br>
+
+a.)  <b><i><u>Problems</u></i> are found at the end of each chapter.  
+All the assignments refer to "Problems" at the end of the 
+chapter unless they are prefixed with "Ex".</b>  Example:  The 
+first problem assigned in this class, 1.5, is found on page 46.  
+<b>Problem</b> 1.5 starts with the phrase, "In the analysis. . ."  
+If you are looking at something else, it is not the assigned problem. 
+(Ex1.5 is found on page 12 and Ex1.5 is not the assigned problem).<br><br>
+ 
+b.) <i><u>Exercises</u></i> are  embedded throughout the body 
+of the chapter contents.  These have answers, but not complete 
 solutions.  Students should challenge themselves to solve some 
 of these exercises.  A few of these may be assigned as homework.  
 If so, on this page their number will be prefixed with "Ex".  
 The first exercise, Ex1.1, starts near the bottom of page 8.<br>
-d.)  <b><i><u>Problems</u></i> are found at the end of each chapter.  
-All the assignments refer to "Problems" at the end of the 
-chapter unless they are prefixed with "Ex".</b>  Example:  The 
-first problem assigned in this class, 1.5, is found on page 46. 
-(Ex1.5 is found on page 12 and Ex1.5 is not the assigned problem).  
-                         <BR><BR><TR><TD width="60" valign="top">
+<b>Exercise</b> 1.1 starts with the phrase, "For the 
+signal-source. . ."<br><br>
 
+c.) <i><u>Examples</u></i> are embedded throughout the body 
+of the chapter contents. These have complete written solutions in 
+the textbook.  Some of the homework may parallel these examples.  
+The first example, Example 1.1, is on page 7.
+<b>Example</b> 1.1 starts with the phrase, "The output resistance. . ."<br><br>
+
+d.) <i><u>Video Examples</u></i> are embedded throughout the body  
+of the chapter contents.  These have complete solutions presented 
+via video accessed by Web.  Some of the homework may parallel 
+these video examples. The first video example is on page 5.  
+<b>Video Example</b> VE1.1 starts with the phrase, "For the circuit
+shown. . ." Some of the video examples are free and some are paid 
+"premium" content.  Students should watch some of these, choosing 
+especially the video examples on topics that are found challenging.  
+However, the "premium content" need not be purchased.  You can 
+always ask Professor De Boer about topics you find challenging.
+
+                         <BR><BR><TR><TD width="60" valign="top">
 Note 2) 
                                                         </TD><TD>
 Discussion in class is an important part of working the 
