--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -92,12 +92,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/180440575/download?download_frd=1"><!-- -->
-	  8/25<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      8/27<!-- --</a><!-- --></td>
+	  8/25<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/180737282/download?download_frd=1"><!-- -->
+      8/27<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=OIVENgNVj8k">VIDEO</a></small> Intro., schlrshp, Web pages, What is info, Signals, Systems, Matlab<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=MEvJ6Prg-9A">VIDEO</a></small> Matlab code, discrete sigs &amp; periodicity, common signals, even-odd<!--end comment--></td>  
    </TR><!-- Week of 8/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
