Updated homework for EGR 363--published PS#2

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 8/06/2020 8:20 pm)
+                               >(Last update: 8/27/2020 4:25 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -104,13 +104,14 @@ PS                                                       </small>
         <DO>Do 2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        8/27<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<br>
+        <a href=""
+		>9/01</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
@@ -144,7 +145,11 @@ PS                                                       </small>
         "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_101"
                                              >101</a>, <a href=
         "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_102"
-                                                     >102</a>.
+                                              >102</a>.<br>&nbsp;
+		                                               <br>&nbsp;
+		Click the due date (link) to turn your work in <br>&nbsp;
+		electronically.  (Applies to all future        <br>&nbsp;
+		assignments as well.  See note 4 below.)  
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  1
@@ -198,6 +203,19 @@ this <a
 href="../../ddb/notes18.htm">note 
 on
 cached pages</a> to solve the problem.
+                         <BR><BR><TR><TD width="60" valign="top">
+Note 4) 
+                                                        </TD><TD>
+We will turn homework in electronically this semester.  Click 
+a due date (the due dates are links) to get instructions from 
+canvas for turning your work in.  The recommended format is a 
+single pdf file from a scanner.  Another alternative is a a 
+word-processor file (docx for example) with photos from a 
+smartphone of your homework pasted into the document.  If you 
+use this alternative, please consider using a "mobile scanner 
+app" in your smartphone to get a nice contrasty picture of 
+each homework page.
+
                                                    </P></TD></TR>
 </TABLE>
 </BODY>
