Published PS#2 for each of EGR 322, EGR 363

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -110,7 +110,7 @@ PS                                                       </small>
         8/27<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href=""
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/28901225"
 		>9/01</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
