--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/26/2020 8:47 pm)
+                              >(Last update: 8/27/2020 4:43 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -115,13 +115,15 @@ PS                                                           <BR>
                                      >*2.79</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        Ex-<br>pect-<br>ed<br>9/01
+        8/27
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/28901832"
+		>9/03</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
