Added PS #4 to EGR 322, EGR 323, updated errata for Sedra Smith 7, 8 Problem 2.92

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 4/25/2020)<br> 
+                    (last update 8/27/2020)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -126,11 +126,11 @@ Page 121,  Problem D2.34 part (d)</b><br>
    
                                             <A NAME="P130"></A><b>
 Page 130,  Problem D2.92</b><br>
-   In the fifth line of the problem statement &quot;3-dB&quot; 
-   should be &quot;&ndash;3-dB.&quot;  Alternatively, add the
-   word &quot;down&quot; so that the phrase reads, &quot;3 dB
-   down frequency.&quot;
-   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/19/2018)
+   In the the problem statement two instances of the phrase 
+   &quot;3-dB frequency&quot; should be &quot;&ndash;3-dB frequency.&quot;  
+   Alternatively, add the word &quot;down&quot; so that the 
+   phrase reads, &quot;3 dB down frequency.&quot;
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/19/2018, updated 8/27/2020)
                                              </i></small><br><br>
    
                                            <A NAME="P234"></A><b>
