--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/27/2020 4:43 pm)
+                              >(Last update: 8/27/2020 10:41 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,30 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)       </DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;                                       		     <br>
+
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br>-->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Op-amp imperfections, slew rate,       <br>&nbsp;
+		full power bandwidth                           <br>&nbsp;
+		Read 2.5 through 2.8                           <br>&nbsp;
+													   <br>&nbsp;
+		<DO>Do 2.87, +D2.92, +2.126, +D*2.127</DO>     <br>&nbsp;
+		                                               <br>&nbsp;
+        Note errata on Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P131"
+                      >D2.92</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  &nbsp;
