--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 8/27/2020 4:25 pm)
+                               >(Last update: 8/27/2020 10:41 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,25 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/154671686/download?download_frd=1"
+		>9/17</a>--><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Linearity, convolution                <br>&nbsp;
+        Read Ch 2 Sec. 2.1                             <br>&nbsp;
+                                                       <br>&nbsp;
+        <DO>Do 2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  &nbsp;
