Posted today's slides, videos, for 322 and 363,and EGR 363 PS#2

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -126,11 +126,11 @@ Page 121,  Problem D2.34 part (d)</b><br>
    
                                             <A NAME="P130"></A><b>
 Page 130,  Problem D2.92</b><br>
-   In the the problem statement two instances of the phrase 
-   &quot;3-dB frequency&quot; should be &quot;&ndash;3-dB frequency.&quot;  
-   Alternatively, add the word &quot;down&quot; so that the 
+   In the the problem statement two instances of the phrase, 
+   &quot;3-dB frequency&quot; should be, &quot;&ndash;3-dB frequency.&quot;  
+   Alternatively, add the word, &quot;down&quot; so that the 
    phrase reads, &quot;3 dB down frequency.&quot;
-   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/19/2018, updated 8/27/2020)
+   &nbsp;<small><i>(Posted 9/19/2018, updated 8/27/2020)
                                              </i></small><br><br>
    
                                            <A NAME="P234"></A><b>
