--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -130,9 +130,9 @@ Page 122-123,  Problem D2.36 part (d)</b><br>
    
                                             <A NAME="P131"></A><b>
 Page 131,  Problem D2.92</b><br>
-   In the problem statement two instances of the phrase 
-   &quot;3-dB frequency&quot; should be &quot;&ndash;3-dB 
-   frequency&quot;  Alternatively, add the word 
+   In the problem statement two instances of the phrase, 
+   &quot;3-dB frequency&quot; should be, &quot;&ndash;3-dB 
+   frequency&quot;  Alternatively, add the word, 
    &quot;down&quot; so that the phrase reads, &quot;3 dB
    down frequency.&quot; 
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020, updated 8/27/2020)
