--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -96,17 +96,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/180767017/download?download_frd=1"><!-- -->
       8/27<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=mC9RISjkgSU">VIDEO</a></small> Intro, How this oourse fits in engr'g, Be Coachable<!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=mC9RISjkgSU">VIDEO</a></small> Intro, How this course fits in engr'g, Be Coachable<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=OrYDPdkUohQ">VIDEO</a></small> Review of PS#1, Review Thevenin Norton, Signals <!--end comment--></td>  
    </TR><!-- Week of 8/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/181670036/download?download_frd=1"><!-- -->
+	  9/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       9/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=79U1DdC9khE">VIDEO</a></small> Signals: det. vs. rand, Thev model, single-ended, vs. diff., spect, BW
+	 <!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 9/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
