--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -100,13 +100,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday   -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=MEvJ6Prg-9A">VIDEO</a></small> Matlab code, discrete sigs &amp; periodicity, common signals, even-odd<!--end comment--></td>  
    </TR><!-- Week of 8/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/181557170/download?download_frd=1"><!-- -->
+	  9/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       9/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=wjNhLNt5AZM">VIDEO</a></small> Hermitian symmetry, power and energy signals, systems, LTI <!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 9/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
