--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 8/27/2020 10:41 pm)
+                               >(Last update: 9/01/2020 9:15 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -104,15 +104,15 @@ PS                                                       </small>
         <DO>Do 2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 3
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        9/01<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<br>
-        
-   <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
+		>9/08</a><br>
+    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/154671686/download?download_frd=1"
 		>9/17</a><br> -->
@@ -133,7 +133,7 @@ PS                                                       </small>
 		>9/01</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        8/31<br><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:15<br>PM.<!--<a href=
 		"https://dordt.instructure.com/files/154671932/download?download_frd=1"
 		>9/10</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
