Published EGR 322 solutions to PS#1, fixed error on egr 363 homework page

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/01/2020 9:15 pm)
+                               >(Last update: 9/01/2020 10:17 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -133,7 +133,7 @@ PS                                                       </small>
 		>9/01</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        8/31<br><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:15<br>PM.<!--<a href=
+        &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/154671932/download?download_frd=1"
 		>9/10</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
