--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/27/2020 10:41 pm)
+                              >(Last update: 9/01/2020 10:15 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -181,15 +181,13 @@ PS                                                           <BR>
 		>8/27</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
-        "https://dordt.instructure.com/files/133815349/download?download_frd=1"
-        >-->Ex-<br>pect-<br>ed<br>9/01<!--</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/181677329/download?download_frd=1"
+        >8/31</a><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:05<br>PM or<br>later.
         <br>
         See<br>
         notes<br>
-        3 <br>
-		thru<br>
-		10<br>
+        3 &ndash; 10<br>
         below
 
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
