--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/01/2020 10:17 pm)
+                               >(Last update: 9/02/2020 9:39 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -133,10 +133,10 @@ PS                                                       </small>
 		>9/01</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/154671932/download?download_frd=1"
-		>9/10</a><br> -->
-   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        <!--<a href=
+        "https://dordt.instructure.com/files/181862610/download?download_frd=1"
+        >-->9/02<!--</a>--><br><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>9/02<br>at<br>about<br>9:30<br>PM or<br>later.
+		<!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Types of signals & systems             <br>&nbsp;
         Read: Ch 1 Sec. 1.4, Ch.2 through Sec. 2.1     <br>&nbsp;
                                                        <br>&nbsp;
