--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -107,7 +107,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       9/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=wjNhLNt5AZM">VIDEO</a></small> Hermitian symmetry, power and energy signals, systems, LTI <!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><small><!--<a href="https://www.youtube.com/watch?v=jFd87stxc2c">-->VIDEO<!--</a>--></small> Causal, sifting prpty, convolution: as superposition, as mirror-slide<!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=UgUq0DOwuPE">VIDEO</a></small> Causal, sifting prpty, convolution: as superposition, as mirror-slide<!--end comment--></td>  
    </TR><!-- Week of 9/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
