--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 9/03/2020 11:39 pm)
+                                >(Last update: 9/04/2020 3:26 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,35 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)       </DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;                                       		     <br>
+
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br>-->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Ideal, models of real diodes under    <br>&nbsp;
+		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
+		Read 4.1 through 4.2.                          <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do 4.2, +4.3, 4.4 parts a, b, f only, +4.7,<br>&nbsp;
+		+4.19 +4.23</DO>                               <br>&nbsp;
+		                                               <br>&nbsp;
+		Your choice of 
+		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
+		<a href="https://www.mathworks.com/products/matlab.html">Matlab</a>, 
+		<a href="http://fooplot.com">Fooplot</a>, 
+		<a href="https://www.desmos.com/">Desmos</a>,  <br>&nbsp;
+		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
+		etc. are recommended for making plots.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  &nbsp;
