--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/04/2020 3:26 pm)
+                                >(Last update: 9/07/2020 10:54 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -181,7 +181,7 @@ PS                                                           <BR>
 		>9/03</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		9/07<!--<a href=
         "https://dordt.instructure.com/files/134086786/download?download_frd=1"
         >9/10</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
