--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/04/2020 2:00 pm)
+                               >(Last update: 9/08/2020 8:53 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -155,15 +155,15 @@ PS                                                       </small>
 		and it evaluates to 1 if <i>i</i> = <i>j</i>   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 4
 
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        9/08<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
-		>9/08</a>--><br>
+        <a href="https://dordt.instructure.com/courses/2899971/assignments/29181655"
+		>9/15</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/155135018/download?download_frd=1"
