Published errata on page 105, Proakis and Salehi 2nd and linked it to 363 PS#2 	modified:   F20/363/363F20PS.HTM 	modified:   errata/Proakis_Salehi/2nd/P_S_2_ER.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/08/2020 8:53 pm)
+                               >(Last update: 9/08/2020 9:44 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -238,9 +238,13 @@ PS                                                       </small>
         "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_42"
                                        >42</a>, and <a href=
         "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_101"
-                                             >101</a>, <a href=
+                                             >101</a>, <br>&nbsp;
+											            <a href=
         "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_102"
-                                              >102</a>.<br>&nbsp;
+        >102</a>, and
+											            <a href=
+        "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_105"
+                     >105</a>.                         <br>&nbsp;
 		                                               <br>&nbsp;
 		Click the due date (link) to turn your work in <br>&nbsp;
 		electronically.  (Applies to all future        <br>&nbsp;
