--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -14,7 +14,7 @@ A:hover {text-decoration:underline;}
 <A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm" 
                        >TEXTBOOK ERRATA</a><br>
-                       (last update 12/04/2019)<br>
+                       (last update 9/08/2020)<br>
                                <br>
       <img src="Proakis_cover_9780133354850.jpg" width="101" height="141" 
               alt="photo of textbook cover"><br><b>
@@ -83,7 +83,15 @@ Page 102, Problem 2.6 part 5</b><br>
    Updated 1/7/2014.                                </i></small>
                                                     </blockquote>
    
-                                      <br><A NAME=ERR_151></A><b>
+                                      <br><A NAME=ERR_105></A><b>
+Page 105, Problem 2.28.</b><br>
+   The lower limit of the integral should be <i>t &ndash; T</i><br>
+   In a few printings and in some electronic editions of this 
+   textbook this lower limit incorrectly has a plus sign in it.<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small>
+         (Posted 9/08/2020)</small>
+      
+                                      <br><br><A NAME=ERR_151></A><b>
 Page 151-152, Problems 3.1, 3.2, 3.3, 3.5, 3.6.</b><br>
    In each of these problems, when the authors mention, "DSB" 
    they mean, "DSB-SC." <br>
