--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/07/2020 10:54 am)
+                                >(Last update: 9/10/2020 8:50 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -121,7 +121,7 @@ PS                                                           <BR>
    <!-- Due -->             </TD><TD align="center" valign="top">
         <a href=
 		"https://dordt.instructure.com/courses/2899971/assignments/29254171"
-		>9/10</a>
+		>9/17</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
