--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/09/2020 12:25 pm)
+                               >(Last update: 9/10/2020 9:04 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -189,7 +189,7 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
 		>9/08</a><br>
     <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        9/10<!--<a href=
 		"https://dordt.instructure.com/files/154671686/download?download_frd=1"
 		>9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
