Added the "story version" of 363 PS#4. 	modified:   F20/363/363F20PS.HTM 	new file:   F20/363/363F20PS4_stories.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/10/2020 9:04 pm)
+                               >(Last update: 9/11/2020 3:17 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -177,7 +177,11 @@ PS                                                       </small>
 		tedious (hence not assigned), but the theorems <br>&nbsp;
 		are famous.                                    <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.31, 2.34, 2.35</DO>
+        <DO>Do 2.31, 2.34, 2.35</DO>                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Do the problem statements look like gibberish  <br>&nbsp;
+		to you?  Try reading them entirely spelled out <br>&nbsp;
+		as <a href= "363F20PS4_stories.htm">word problems</a>.                     
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  3
