Fixed broken link to 363 PS#4 stories 	modified:   F20/363/363F20PS.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -181,7 +181,7 @@ PS                                                       </small>
 		                                               <br>&nbsp;
 		Do the problem statements look like gibberish  <br>&nbsp;
 		to you?  Try reading them entirely spelled out <br>&nbsp;
-		as <a href= "363F20PS4_stories.htm">word problems</a>.                     
+		as <a href= "363F20PS4_stories.HTM">word problems</a>.                     
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  3
