Fixed a spelling error, liner to linear 	modified:   F20/363/363F20PS4_stories.HTM

--- a/F20/363/363F20PS4_stories.HTM
+++ b/F20/363/363F20PS4_stories.HTM
@@ -66,7 +66,7 @@ equations.  <br><br>
 <b>Problem two-point-thirty-one.</b><br>   
 By replacing the general input signal <i>x</i> with the unit-step input
 signal in the convolution integral, prove that the response of a 
-liner-time-invariant system to the unit step function as the 
+linear-time-invariant system to the unit step function as the 
 input to the system is found by integrating the system's 
 impulse response from minus infinity to the time-instant at 
 which you would like to know what the output is.<br><br>
