--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/10/2020 8:51 pm)
+                                >(Last update: 9/14/2020 11:29 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -149,7 +149,7 @@ PS                                                           <BR>
 		>9/10</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		9/14<!--<a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
