EGR 363 published PS#5 	modified:   F20/363/363F20PS.HTM 	new file:   F20/363/363F20PS5_stories.HTM 	new file:   F20/363/pi.gif

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/15/2020 7:50 am)
+                               >(Last update: 9/15/2020 9:38 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -85,14 +85,14 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 5
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        9/15<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
-		>9/08</a>--><br>
+        &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
+		>9/22</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/155135018/download?download_frd=1"
@@ -107,6 +107,13 @@ PS                                                       </small>
 		For problem 2.36 the author expects you to let <br>&nbsp;
 		the basis signals equal zero outside of the    <br>&nbsp;
 		defined interval [&alpha;, &alpha; + <i>T<sub>0</sub></i>].<br>&nbsp;
+		                                               <br>&nbsp;
+		Slides 27 and 28 from <a href=
+		"https://dordt.instructure.com/files/182724418/download?download_frd=1"
+		>9/10</a>.  elaborate on the                   <br>&nbsp;
+		definition of the dot product of two signals.  <br>&nbsp;
+		These slides might be helpful in working       <br>&nbsp;
+		Problem 2.36.                           <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Divide-by-zero errors</b> are possible mistakes <br>&nbsp;
 		when working the F.S. analysis integral.  Do you<br>&nbsp;
@@ -137,14 +144,6 @@ PS                                                       </small>
 		If <i>n</i> is even but not zero, then <i>x<sub>n</sub></i> equals a "special <br>&nbsp;
 		integer." If <i>n</i> = 0, then <i>x<sub>n</sub></i> = <i>x<sub>0</sub></i> = a rational number.<br>&nbsp;
 		                                               <br>&nbsp;
-		Two <b>additional slides</b> have been added at the<br>&nbsp;
-		end of the slide file for <a href=
-		"https://dordt.instructure.com/files/155132723/download?download_frd=1"
-		>9/12</a>.  These slides <br>&nbsp;
-		elaborate on the definition of the dot product of<br>&nbsp;
-		two signals. These slides might be helpful in   <br>&nbsp;
-		working <b>Problem 2.36</b>.                   <br>&nbsp;
-		                                               <br>&nbsp;
 		<b>Note: errata on textbook page 107, Prob. 2.38</b><br>&nbsp;
 		This problem is not assigned, but an error in  <br>&nbsp;
 		this problem statement could be confusing when <br>&nbsp;
@@ -152,7 +151,9 @@ PS                                                       </small>
 		the problem statement of problem 2.38 the "1"  <br>&nbsp;
 		and the "0" are interchanged from where they   <br>&nbsp;
 		should be.  The integral evaluates to 0 if <i>i</i> &ne; <i>j</i>    <br>&nbsp;
-		and it evaluates to 1 if <i>i</i> = <i>j</i>   
+		and it evaluates to 1 if <i>i</i> = <i>j</i>   <br>&nbsp;
+                                                       <br>&nbsp;
+		The problems stated mostly as <a href= "363F20PS5_stories.HTM">word problems</a>.   											   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  4
