Published slides and vedio for today's 363 class 	modified:   F20/363/363F20DN.HTM

--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -122,12 +122,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/183303947/download?download_frd=1"><!-- -->
-	  9/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/17<!-- --</a><!-- --></td>
+	  9/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/183563980/download?download_frd=1"><!-- -->
+      9/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=g0pCw7c6z1M">VIDEO</a></small><!-- --> Spectrogram demos, Fourier Series of a pulse <!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=6FwP46sb4RM">VIDEO</a></small><!-- --> Example: F.S. of cos, Trig and Compact F.S., conversions<!--end comment--></td>  
    </TR><!-- Week of 9/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
